# zero-address-contract

./: .gitignore  Cargo.toml  README.md  benchmark_eoa.rs  generate_address.py  get_init_code.js  hardhat.config.js  init_code.txt  package-lock.json  package.json  requirements.txt
contracts/: CREATE2Deployer.sol  MockContract.sol  SimpleProxy.sol
src/: main.rs
test/: CREATE2Deployment.test.js  SimpleProxy.test.js
