[package]
name = "zero-address-contract"
version = "0.1.0"
edition = "2021"
default-run = "zero-address-contract"

[[bin]]
name = "zero-address-contract"
path = "src/main.rs"

[[bin]]
name = "benchmark-eoa"
path = "benchmark_eoa.rs"

[dependencies]
secp256k1 = { version = "0.28", features = ["rand"] }
sha3 = "0.10"
rand = "0.8"
hex = "0.4"
ethereum-types = "0.15"
clap = { version = "4.4", features = ["derive"] }
rlp = "0.5"

